--- a/user-web-client/src/pages/myorder/myOrder.css
+++ b/user-web-client/src/pages/myorder/myOrder.css
@@ -16,7 +16,7 @@
     gap: 30px;
     font-size: 14px;
     padding: 10px 20px;
-    color: #000; /* ฟ้อนสีดำ */
+    color: #000;
     border: 1px solid tomato;
 }
 
@@ -25,16 +25,16 @@
 }
 
 .my-order-orders p {
-    color: #000; /* ฟ้อนสีดำ */
+    color: #000;
 }
 
 .my-order-orders p span {
-    color: tomato; /* สัญลักษณ์สีแดง */
+    color: tomato;
 }
 
 .my-order-orders p b {
     font-weight: 500;
-    color: #000; /* ฟ้อนสีดำ */
+    color: #000;
 }
 
 .my-order-orders button {
@@ -43,16 +43,16 @@
     border-radius: 4px;
     background-color: #ffe1e1;
     cursor: pointer;
-    color: #454545; /* สีปุ่ม */
+    color: #454545;
 }
 
 .my-order-orders button:hover {
-    background-color: #ffcccc; /* สีเมื่อเมาส์อยู่เหนือปุ่ม */
+    background-color: #ffcccc;
 }
 
 .my-order-orders button:focus {
     outline: none;
-    box-shadow: 0 0 0 2px tomato; /* เพิ่มเงาเมื่อโฟกัส */
+    box-shadow: 0 0 0 2px tomato;
 }
 
 @media (max-width: 900px) {
@@ -61,6 +61,7 @@
         row-gap: 5px;
         font-size: 12px;
     }
+
     .my-order-orders button {
         font-size: 10px;
     }
