--- a/user-web-client/src/pages/place-order/placeOrder.css
+++ b/user-web-client/src/pages/place-order/placeOrder.css
@@ -4,12 +4,12 @@
     justify-content: space-between;
     gap: 50px;
     margin-top: 100px;
-    padding: 20px; /* เพิ่มช่องว่างรอบนอก */
+    padding: 20px;
 }
 
 .place-order-left {
     width: 100%;
-    max-width: max(30%,500px);
+    max-width: max(30%, 500px);
 }
 
 .place-order-left .title {
@@ -28,12 +28,12 @@
 }
 
 .place-order-left input:invalid {
-    border-color: red; /* แสดงเส้นขอบสีแดงเมื่อกรอกข้อมูลไม่ถูกต้อง */
+    border-color: red;
 }
 
 .place-order-left input:focus {
-    border-color: tomato; /* เปลี่ยนสีเส้นขอบเมื่อโฟกัส */
-    box-shadow: 0 0 5px rgba(255, 99, 71, 0.5); /* เพิ่มเงา */
+    border-color: tomato;
+    box-shadow: 0 0 5px rgba(255, 99, 71, 0.5);
 }
 
 .place-order-left .multi-fields {
@@ -43,27 +43,28 @@
 
 .place-order-right {
     width: 100%;
-    max-width: max(40%,500px);
+    max-width: max(40%, 500px);
 }
 
 .place-order .cart-total button {
     margin-top: 30px;
-    background-color: tomato; /* เปลี่ยนสีพื้นหลังของปุ่ม */
-    color: white; /* เปลี่ยนสีตัวอักษร */
-    transition: background-color 0.3s ease; /* เพิ่มการเปลี่ยนสี */
+    background-color: tomato;
+    color: white;
+    transition: background-color 0.3s ease;
 }
 
 .place-order .cart-total button:hover {
-    background-color: darkred; /* เปลี่ยนสีเมื่อ hover */
+    background-color: darkred;
 }
 
 @media (max-width: 768px) {
     .place-order {
-        flex-direction: column; /* เปลี่ยนเป็นคอลัมน์เมื่อหน้าจอเล็ก */
+        flex-direction: column;
         gap: 20px;
     }
 
-    .place-order-left, .place-order-right {
-        max-width: 100%; /* ให้ใช้ความกว้างเต็ม */
+    .place-order-left,
+    .place-order-right {
+        max-width: 100%;
     }
 }
